--- a/index.html
+++ b/index.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./styles/assets.css">
-    <link rel="stylesheet" href="./styles/standard.css">
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles/assets.css" />
+    <link rel="stylesheet" href="./styles/standard.css" />
+    <link rel="stylesheet" href="./styles/navbar.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <script src="./script.js"></script>
     <script src="./scripts/templates.js"></script>
-</head>
-<body>
-    
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+      defer
+    ></script>
+  </head>
+  <body onload="init()">
+    <header>
+        <nav class="navbar navbar-expand-lg bg-navbar">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html">
+                    <svg width="30" height="30" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="15" cy="15" r="10" fill="none" stroke="white" stroke-width="2" />
+                        <circle cx="15" cy="15" r="3" fill="none" stroke="white" stroke-width="2" />
+                        <line x1="5" y1="15" x2="10" y2="15" stroke="white" stroke-width="2" />
+                        <line x1="20" y1="15" x2="25" y2="15" stroke="white" stroke-width="2" />
+                    </svg>
+                    Pokedex
+                </a>
+                <form class="d-flex ms-auto">
+                    <input class="form-control me-2" type="search" placeholder="Search for a Pokémon..." aria-label="Search">
+                </form>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div id="content"></div>
+    </main>
+  </body>
 </html>
