--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex</title>
+    <link rel="shortcut icon" href="./assets/img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./styles/assets.css" />
     <link rel="stylesheet" href="./styles/standard.css" />
@@ -28,18 +29,7 @@
         <nav class="navbar navbar-expand-lg bg-navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <svg width="30" height="30" xmlns="http://www.w3.org/2000/svg">
-                        <defs>
-                            <linearGradient id="circle-fill" x1="0" y1="0" x2="0" y2="1">
-                                <stop offset="50%" stop-color="red" />
-                                <stop offset="50%" stop-color="white" />
-                            </linearGradient>
-                        </defs>
-                        <circle cx="15" cy="15" r="10" fill="url(#circle-fill)" stroke="black" stroke-width="2" />
-                        <circle cx="15" cy="15" r="3" fill="white" stroke="black" stroke-width="2" />
-                        <line x1="6" y1="15" x2="12" y2="15" stroke="black" stroke-width="2" />
-                        <line x1="18" y1="15" x2="24" y2="15" stroke="black" stroke-width="2" />
-                    </svg>
+                    <img src="./assets/img/favicon.svg" alt="logo">
                     Pokedex
                 </a>
                 <form class="d-flex ms-auto">
