--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
     </header>
     <main>
         <div id="content" class="content"></div>
+        <div class="d-grid gap-2 col-6 mx-auto pt-3 pb-3">
+            <button class="btn btn-secondary" type="button">Load more</button>
+        </div>
     </main>
+    <footer></footer>
   </body>
 </html>
