--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
         <div id="content" class="content"></div>
         <div class="d-grid gap-2 col-6 mx-auto pt-3 pb-3">
-            <button class="btn btn-secondary" type="button">Load more</button>
+            <button class="btn btn-secondary" type="button" onclick="storeMoreFetchedData()">Load more</button>
         </div>
     </main>
     <footer></footer>
