show loadingSpinner on fetching more Pokemon

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div class="d-grid gap-2 col-6 mx-auto pt-3 pb-3">
             <button class="btn btn-secondary" type="button" onclick="storeMoreFetchedData()">Load more</button>
         </div>
+        <div id="loading-overlay" class="d_none"></div>
     </main>
     <footer></footer>
   </body>
