loading spinner adjustments/ styling

--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
     </header>
     <main>
         <div id="content" class="content"></div>
-        <div class="d-grid gap-2 col-6 mx-auto pt-3 pb-3">
-            <button class="btn btn-secondary" type="button" onclick="storeMoreFetchedData()">Load more</button>
-        </div>
+        <div id="load-more-btn" class="d-grid gap-2 col-6 mx-auto pt-3 pb-3"></div>
         <div id="loading-overlay" class="d_none"></div>
     </main>
     <footer></footer>
