--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex</title>
-    <link rel="shortcut icon" href="./assets/img/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/favicon.svg" type="image/x-icon" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./styles/assets.css" />
     <link rel="stylesheet" href="./styles/standard.css" />
     <link rel="stylesheet" href="./styles/navbar.css" />
-    <link rel="stylesheet" href="./styles/types.css">
-    <link rel="stylesheet" href="./styles/loading-spinner.css">
+    <link rel="stylesheet" href="./styles/types.css" />
+    <link rel="stylesheet" href="./styles/loading-spinner.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,22 +28,24 @@
   </head>
   <body onload="init()">
     <header>
-        <nav class="navbar navbar-expand-lg bg-navbar">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">
-                    <img src="./assets/img/favicon.svg" alt="logo">
-                    Pokedex
-                </a>
-                <form class="d-flex ms-auto">
-                    <input class="form-control me-5" type="search" placeholder="Search for a Pokémon..." aria-label="Search">
-                </form>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-lg bg-navbar">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="./index.html">
+            <img src="./assets/img/pokeball.png" alt="logo" class="logo"/>
+            <img src="./assets/img/pokedex_curved.png" alt="Pokédex">
+          </a>
+          <form class="d-flex ms-auto">
+            <input class="form-control me-5" type="search" placeholder="Search for a Pokémon..." aria-label="Search" />
+          </form>
+        </div>
+      </nav>
     </header>
     <main>
+      <div class="main-content">
         <div id="content" class="content"></div>
         <div id="load-more-btn" class="d-grid gap-2 col-6 mx-auto pt-3 pb-3"></div>
         <div id="loading-overlay" class="d_none"></div>
+      </div>
     </main>
     <footer></footer>
   </body>
