--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html">
             <img src="./assets/img/pokeball.png" alt="logo" class="logo"/>
-            <img src="./assets/img/pokedex_curved.png" alt="Pokédex">
+            <img src="./assets/img/pokedex_curved.png" alt="Pokédex" class="logo-text">
           </a>
           <form class="d-flex ms-auto">
             <input id="pokemon-search" oninput="filterPokemonList()" class="form-control me-5" type="search" placeholder="Search for a Pokémon..." aria-label="Search" />
