modal about & stats implemented

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div id="loading-overlay" class="d_none"></div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+    </footer>
   </body>
 </html>
