--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./styles/types.css" />
     <link rel="stylesheet" href="./styles/loading-spinner.css" />
     <link rel="stylesheet" href="./styles/modal.css">
+    <link rel="stylesheet" href="./styles/footer.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -51,6 +52,10 @@
       </div>
     </main>
     <footer>
+      <div class="footer-content">
+        <div>© 2002-2025 Pokémon. © 1995-2025 Nintendo/Creatures Inc./GAME FREAK inc. TM</div>
+        <div>Pokédex programmed 2025 by Marcel Fuchs</div>
+      </div>
     </footer>
   </body>
 </html>
