--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body onload="init()">
     <header>
       <nav class="navbar navbar-expand-lg bg-navbar">
-        <div class="container-fluid">
+        <div class="container-fluid m-width-1920">
           <a class="navbar-brand" href="./index.html">
             <img src="./assets/img/pokeball.png" alt="logo" class="logo"/>
             <img src="./assets/img/pokedex_curved.png" alt="Pokédex" class="logo-text">
